--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "notyf": "^3.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@types/chrome": "0.0.158",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
